2015-04-16  Werner Lemberg  <wl@gnu.org>

	[ftgrid]: Key `W' now toggles warper (if compiled-in).

	* src/ftgrid.c [FT_DEBUG_AUTOFIT]: New extern variable
	`_af_debug_disable_warper'.
	(GridStatusRec): Add `do_warp' member.
	(grid_status_init): Updated.
	(grid_status_draw_outline): Set `_af_debug_disable_warper'.
	(event_help): Updated.
	(Process_Event): Handle `W' key.

2015-04-16  Werner Lemberg  <wl@gnu.org>

	[ftgrid]: Make blue zone toggling actually work.

	* src/ftgrid.c (grid_status_draw_outline) [FT_DEBUG_AUTOFIT]: Set
	`_af_debug_disable_blue_hints'.

2015-04-16  Werner Lemberg  <wl@gnu.org>

	* src/ftgrid.c (Process_Event) <' '>: Don't reset debugging flags.

2015-04-16  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Cycle through AA rendering modes with F5 and F6.

	* src/ftgrid.c (event_lcd_mode_change): New function.
	(Process_Event) [FT_DEBUG_AUTOFIT]: Enable debug stuff for light AA
	mode also.
	Handle `F5' and `F6' keys.
	(event_help): Updated.

2015-04-14  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Fix memory leak.

	* src/ftgrid.c (event_font_change): Free `status.mm' before calling
	`FT_Get_MM_Var' (again).

2015-04-14  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Show proper names for GX axes.

	* src/ftgrid.c: Include `aux.h', FT_SFNT_NAMES_H, and
	FT_TRUETYPE_IDS_H.
	(GridStatusRec): Add `axis_name' array.
	(event_font_change): Set GX axis name if possible.
	(write_header): Use `axis_name' if non-NULL.
	(main): Add clean-up code for `axis_name' array.

2015-04-14  Werner Lemberg  <wl@gnu.org>

	[aux] Add functions for outputting strings.

	* src/aux.c (hexdigit): New static array.
	(put_ascii_string, put_ascii_string_size, put_unicode_be16_string,
	put_unicode_be16_string_size): New functions.
	(put_ascii, put_unicode_be16): Use new functions to implement it.

	* src/aux.h: Updated.

2015-04-14  Werner Lemberg  <wl@gnu.org>

	Move some output functions to a separate file.

	* src/aux.c, src/aux.h: New files, holding `put_ascii' and