@@ -1,6 +1,13 @@
+2015-04-18  Werner Lemberg  <wl@gnu.org>
+
+	[ftgrid] Show advance width.
+
+	* src/ftgrid.c (grid_status_draw_outline): Display vertical line at
+	advance width position.
+
 2015-04-16  Werner Lemberg  <wl@gnu.org>
 
-	[ftgrid]: Key `W' now toggles warper (if compiled-in).
+	[ftgrid] Key `W' now toggles warper (if compiled-in).
 
 	* src/ftgrid.c [FT_DEBUG_AUTOFIT]: New extern variable
 	`_af_debug_disable_warper'.
@@ -12,7 +19,7 @@
 
 2015-04-16  Werner Lemberg  <wl@gnu.org>
 
-	[ftgrid]: Make blue zone toggling actually work.
+	[ftgrid] Make blue zone toggling actually work.
 
 	* src/ftgrid.c (grid_status_draw_outline) [FT_DEBUG_AUTOFIT]: Set
 	`_af_debug_disable_blue_hints'.
